--- a/.github/workflows/setup xcode version.yml
+++ b/.github/workflows/setup xcode version.yml
@@ -1,6 +1,6 @@
 jobs:
   build:
-    runs-on: windows-10
+    runs-on: macos-latest
     steps:
     - uses: maxim-lobanov/setup-xcode@v1
       with:
